--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
  <head>
   <title>home</title>
@@ -55,7 +55,8 @@
    <br>
   <article class="notice">
    Hanny World에 오신 것을 환영합니다!
-   <br> 취미와 관심사를 함께 공유해요~
+   <br> 본 웹페이지는 실습 용도로 제작되었습니다. 
+   <br> 취미와 관심사를 함께 공유해요~ 
    <p><a href="introduce.html">취미 소개 페이지로 이동하기 ! </a></p>
    </article>
    <br>
